Adding the ability to query for agreeability types
